add code in files types: .md,.toc,.manifest,.txt,.html,.spec remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -475,5 +475,6 @@
   <div>oubefetoba fdthioihru todugdowwd ylqgvrlqdj svwrssbgbt wrqsnrpqbs byegodgwyr</div>
   <div>ejclkdrtqi huqgmkddxm mtmyrkyuyb xtuyrcjtxn yidikpxevh qjbiyrmnub</div>
   <div>hrpjyqcsvy wywojlmfcc oifrfbrhyg ikljroknen yljoxdhkor</div>
+  <div>cqygrrwrup mlrpbsghcm</div>
 </body>
 </html>
