add code in files types: .md,.toc,.manifest,.txt,.html,.spec remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -306,5 +306,6 @@
   <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
   <div>udlcpmjrjy wxmiseedsl ubiblannlo</div>
+  <div>bvtcrlaije</div>
 </body>
 </html>
