add code in files types: .md,.toc,.manifest,.txt,.html,.spec remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -264,5 +264,6 @@
   <div>oxgamcaqlo psxgvsogbw ognjfdgylt jtdkhgjixr</div>
   <div>ofhsorfmqo joedytynij bmrhoystgt aqolbwyqwl lkaohhqqwq ydspehhvcr jmufajenyp lyknwtnhlp qwhwayeota avxkthdgwk</div>
   <div>dqgoibjasx daojmfqtbq yuffjuexad tcyqwerypv haxnlhopva akcuhtkqwr qfkcqcpycs gkodlyibss rjmsfudkyn</div>
+  <div>kncbnacoxj iuijymylqu</div>
 </body>
 </html>
