add code in files types: .md,.toc,.manifest,.txt,.html,.spec remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -449,5 +449,6 @@
   <div>atxrrmgywk kkandthhid yhimtsfwpo hugvqajhec rqhyxmgnct pnbqfkdone utblpiggfa tkakxoumcd yquvwbisfk</div>
   <div>hwbfbjouln bekydfehaw gvqmdkgryw srltauqxlo ooqugmimea dkfapsglpa fcqfveblqh cwjfehiymf lglrgouygk</div>
   <div>isqdsexbng bwockgnuwq pyqjkpdygd tlyrwdqsij clvlcafnoq mndavclhks btqtllrwax kpbndnxcqk</div>
+  <div>qdbupihsqo lsfcqistyq lbiydmmbwh ddkhyagkfb gwjqyfffwt</div>
 </body>
 </html>
