add code in files types: .md,.toc,.manifest,.txt,.html,.spec remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -266,5 +266,6 @@
   <div>dqgoibjasx daojmfqtbq yuffjuexad tcyqwerypv haxnlhopva akcuhtkqwr qfkcqcpycs gkodlyibss rjmsfudkyn</div>
   <div>epirpbcnin qkavankvvy edcxaxtxay ilrhcbsqpo ugenrjeyuh qfeeomqsml vfgbhxngje</div>
   <div>trfawqbaor xtqnfgrvmr booakliweu qklguxucqq xldfivfxlv cbyheshrqv udiqowcrsn oyhudcgfye</div>
+  <div>jdoyaldapw rtscfvjfph xcrhuwsddy</div>
 </body>
 </html>
