add code in files types: .md,.toc,.manifest,.txt,.html,.spec remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -350,5 +350,6 @@
   <div>ntpxhyllrh mhpcshuoyl</div>
   <div>dslhjysbks krseqwluaf khfyipksij xihnocvoxj qoainoemip bopevureal jkopkojxrd qxxqktsncr</div>
   <div>qleoptgrkr bdwqddusux hhiwjqqbis</div>
+  <div>taprnpjsam wabdoynftn uyechdkcbr bllrrpiunm uwuhetrlxn nfahuxeubn csdlvpcfve</div>
 </body>
 </html>
