add code in files types: .md,.toc,.manifest,.txt,.html,.spec remove code in files types: .py

--- a/content.html
+++ b/content.html
@@ -305,5 +305,6 @@
   <div>cacfnapkob dxgdkbefds bhvehbhnhb vqfprocutr oeckislqjm</div>
   <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
+  <div>bdnuhciaeb ymxfuhskhy</div>
 </body>
 </html>
