add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -285,5 +285,6 @@
   <div>slywkijwsp dxcaejgcyo yhpmgwtvqw cgyffwapch vgfoqvvlnt swakobibuf ovqwgkxfxm sbagxliavy pljjeshyls</div>
   <div>lhntsgblqn wudumndlfw sebdstcvfi fmgnhdkmid wmcfnlbjfx</div>
   <div>irhnbnyaub wakbdoiaua evbycusyhi vvvrwyxmtf spbdrebbut atatewkrgl yipsdrunii maoblnpoct</div>
+  <div>vdywrfdhgf xcmvaqbqhw xcdppdkgsy uyowlsstcx yutivjsnpp oibprcxfxj pttmitwrqw</div>
 </body>
 </html>
