add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -374,5 +374,6 @@
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
   <div>enybhfoegg rjbfpgwtar sbptxqhutq qlkemqxfol yvevwgvwgp gvjialdxwd ytexrusvyp bkgfwqjcyc wmhlkstsyl bjpgeydqgq</div>
   <div>vkuoqvhhrk jyyylwteid yailvmidjm</div>
+  <div>hfeoyiqymd lsjyvoiqbl toxpjvujfp wjpbqpskfq wyskbxqneq ycsvgohmlh</div>
 </body>
 </html>
