add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -306,6 +306,7 @@
   <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
   <div>udlcpmjrjy wxmiseedsl ubiblannlo</div>
-  <div>eroqbvchrt mcwvksmryb</div>
+  <div>ogvtasylfm enwiyijupf gjjohivspn sxxcpugxgd iajujeeyso hblqictiqc uflesoxipx skmwjpiddy</div>
+  <div>hegpybdkqp plriafhmuf mxrwejniir dqamhqucve tsokcqixsw xrqafmcnvm</div>
 </body>
 </html>
