add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -228,5 +228,6 @@
   <div>rwhrxfkods rfykoyklnl afqdxiwtmw melokqndaa offilxlaci</div>
   <div>lsqjcykant rumwgeirgd nbwejbslcv rwfhpesrad cpmlxnjuam fwvasgomls xeaqvbgmjr ipalwvkaui</div>
   <div>lmrqcfyldn jqbvqhrfrn</div>
+  <div>nlollgamsu wxgfseelqy uppjwsgcfs fokregnmyg bsvljwpoul javiyocjom</div>
 </body>
 </html>
