add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -246,5 +246,6 @@
   <div>echsvxdatx qvvqyfacru hjmqlfvwsa bbxmoeikoq anpsjkjepy sovgubteyh ocvtabkdxt</div>
   <div>eptxacuibb aayebnnimd drjpujxltt hyxoxrobgg npwjacpdss xhhxpggdhc wxrjusemmy iugrwuxndv xqespjahgs dvbmtfjyhd</div>
   <div>iyqhpjwckd nhgetiidjr byfadxgocu</div>
+  <div>sergsxorxo jlhdpodupu fklbjlpjss iqokxgyrig dlwjedeptd qbxikjhatj gvvhmrhuca qhrafakrmf jvcyprnymf</div>
 </body>
 </html>
