add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -328,5 +328,6 @@
   <div>mgsciwilcx wmlorssgal twrqghmauk shdgspnyon uusoipdqrs sedimdcunu usdvcfjlon mhujvvnrte</div>
   <div>ocsdyyvrwg ntbihvmtuh ndvbviuaeu lranxfcthj glartbeyyb bhnbskkmio pwclftanod uveeynmfjr qsaxbalfft txglynwebh</div>
   <div>qhlmjfxmsg</div>
+  <div>fopdugxfiv clbtjlpcwx</div>
 </body>
 </html>
