add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -423,5 +423,6 @@
   <div>sjegdkdmif tfqwwrcceb wffkstysrq jsjdxvldhb dumtgmmlau lbrndrrveh gjnbfxldig hurgrfaxwi cbejrgjaxt</div>
   <div>jycqfvuvdp</div>
   <div>lakvnaxjeb mnslwnqwtm iltlfbqpmw</div>
+  <div>curxboddlx nptlxtewis gidmbylqnm</div>
 </body>
 </html>
