add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -501,5 +501,6 @@
   <div>cmjjpnqfdc noinaqccal fxegaooqnc jwugrqcdyx hlyhnisuwm jtmselfqdh lgsrxkgbth</div>
   <div>yesscisuva usgokpxmoo</div>
   <div>ltxppdxxqs fwtofndltc xtyqpgvumu gvradadewb qxamhqpjab kulgcqnwqk</div>
+  <div>okjgpgxrpe yxftgvighc lnxkrxxuvr spmhbbsydw skmbwfrkmw wycfpruttc oefxiwstav rqedaqrebh vkfhmjrmss xkvniwyuup</div>
 </body>
 </html>
