add code in files types: ,.md,.xml,.js,.html,.svg,.json,.css remove code in files types:

--- a/content.html
+++ b/content.html
@@ -307,5 +307,6 @@
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
   <div>udlcpmjrjy wxmiseedsl ubiblannlo</div>
   <div>eroqbvchrt mcwvksmryb</div>
+  <div>fayjauybgu</div>
 </body>
 </html>
