add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -327,6 +327,6 @@
   <div>ffbmwqwrer ckntevijru pyvfnpvgkp bxicvpqpbq jaorfuetam yiyqmbwsmw</div>
   <div>mgsciwilcx wmlorssgal twrqghmauk shdgspnyon uusoipdqrs sedimdcunu usdvcfjlon mhujvvnrte</div>
   <div>ocsdyyvrwg ntbihvmtuh ndvbviuaeu lranxfcthj glartbeyyb bhnbskkmio pwclftanod uveeynmfjr qsaxbalfft txglynwebh</div>
-  <div>qhlmjfxmsg</div>
+  <div>ksntoggivm tqxkutmijh</div>
 </body>
 </html>
