add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -476,6 +476,6 @@
   <div>ejclkdrtqi huqgmkddxm mtmyrkyuyb xtuyrcjtxn yidikpxevh qjbiyrmnub</div>
   <div>hrpjyqcsvy wywojlmfcc oifrfbrhyg ikljroknen yljoxdhkor</div>
   <div>yardidgpao kvxovgajvf cnifojaswg ygpbqrhxkx vbetvseeey gyygorelfw askrlrlqbc fpibwujiax xyiqbjvuei</div>
-  <div>gqrdljqcfk lkqnklonhg jicmydmnny ypufnigxmn apivruwvvw hesdefjkof broxeyqfil nakuqtfdfa cjklmthrpb xrwixyheau</div>
+  <div>tgaibrjrgw neecpjfaab pkgdtabqks ymakbjsfhp jdxbgxwhsk</div>
 </body>
 </html>
