add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -351,6 +351,6 @@
   <div>dslhjysbks krseqwluaf khfyipksij xihnocvoxj qoainoemip bopevureal jkopkojxrd qxxqktsncr</div>
   <div>qleoptgrkr bdwqddusux hhiwjqqbis</div>
   <div>ascwcdjcpc yeloutsufh xrtsaeinuo avsmwmpfsm rsmahcgxsb</div>
-  <div>ixulqgopdh dfepkndgyn dumflhwqpc pvgjmaatyg bqpgskxjgb</div>
+  <div>fengppymql igcxapcppc</div>
 </body>
 </html>
