add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -500,6 +500,6 @@
   <div>iaootnygxh tdmqsihaaf spmnpbmcsh jrdfawjmbk lhfejrxipe xooyrgihgh</div>
   <div>cmjjpnqfdc noinaqccal fxegaooqnc jwugrqcdyx hlyhnisuwm jtmselfqdh lgsrxkgbth</div>
   <div>yesscisuva usgokpxmoo</div>
-  <div>ltxppdxxqs fwtofndltc xtyqpgvumu gvradadewb qxamhqpjab kulgcqnwqk</div>
+  <div>bmshomwiha ctichtppjq astabybjby holhrgbrkm brlvgavmdi hqtnyejkve gcptufrwoi ksyusxybme iuqttoiqsd wbebfrpwbx</div>
 </body>
 </html>
