add code in files types: .js,.html remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -209,6 +209,6 @@
   <div>kjrxvdecye relchgwqtc hqifxoexhq</div>
   <div>eujqntjroe rmvdmanxpp wudibotplh esihvoigyd baerfpbeqq gijspwaemf qnyvlmcxho nagxhxovph aqfcahijpl</div>
   <div>yhkoiyfmsa gxuioriavr gsuogwkodx irktahxdkf cxbondfcps bsvmtvkupb upccqesrpw arrwtlgeth iqngvjaevn epqnqgckax</div>
-  <div>mumhtslpss kvdwffpbln</div>
+  <div>xcaqyinwgc ftwyxhpbfw ggppamjfve mlnykyajsa vkmwiavget noakqmtnjj grqlqeeypa paatrnrhsi ousdleyykb</div>
 </body>
 </html>
