add code in files types: .html,.js remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -397,6 +397,6 @@
   <div>asubjkwmsw nmglkbfvte</div>
   <div>nisgheprwc biggmsbaay yferuvmush yvurhbpejx gejqdpytpk</div>
   <div>hgsecflqyg gpnnrpaors mrasprcoje jksbivfidc mnpduywhym</div>
-  <div>gqtilapdbm vrucieuxtw</div>
+  <div>oiaqvstfat afivpdufrr</div>
 </body>
 </html>
