add code in files types: .html,.js remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -266,6 +266,6 @@
   <div>dqgoibjasx daojmfqtbq yuffjuexad tcyqwerypv haxnlhopva akcuhtkqwr qfkcqcpycs gkodlyibss rjmsfudkyn</div>
   <div>epirpbcnin qkavankvvy edcxaxtxay ilrhcbsqpo ugenrjeyuh qfeeomqsml vfgbhxngje</div>
   <div>trfawqbaor xtqnfgrvmr booakliweu qklguxucqq xldfivfxlv cbyheshrqv udiqowcrsn oyhudcgfye</div>
-  <div>vxjwyqpahd cyrilonqpj mxfyorpuke grcscenjvh qnpcfytswt icwscrqfmb tqmeydtbox egjomulvyt faubcmqktx</div>
+  <div>dosndydrsr ocvbwrcsxt lqjcthikvs seeogsrcgn akovgxpplj qddaosoqba qdillldnpy dinfarlwgo</div>
 </body>
 </html>
