add code in files types: .html,.js remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -351,6 +351,6 @@
   <div>dslhjysbks krseqwluaf khfyipksij xihnocvoxj qoainoemip bopevureal jkopkojxrd qxxqktsncr</div>
   <div>qleoptgrkr bdwqddusux hhiwjqqbis</div>
   <div>ascwcdjcpc yeloutsufh xrtsaeinuo avsmwmpfsm rsmahcgxsb</div>
-  <div>fengppymql igcxapcppc</div>
+  <div>ojmlqgofsd vtlkktwynt</div>
 </body>
 </html>
