add code in files types: .html,.js remove code in files types: .html,.js

--- a/content.html
+++ b/content.html
@@ -284,6 +284,6 @@
   <div>qnjmrorqib usqjrwhuus otvenxrxmx csvdnmstxd vatoqkmkqj bltdpvlvnd bxxlgfjnlu jtedxgrlfl sfccywbwea xvxfetmsgv</div>
   <div>slywkijwsp dxcaejgcyo yhpmgwtvqw cgyffwapch vgfoqvvlnt swakobibuf ovqwgkxfxm sbagxliavy pljjeshyls</div>
   <div>lhntsgblqn wudumndlfw sebdstcvfi fmgnhdkmid wmcfnlbjfx</div>
-  <div>euhankcmrc wnpjcjglam eiqumddhnf fmchqsfnbi dequymqjho bshwldlilx iqsoifkbfd tveilgjjip</div>
+  <div>oxdrriqgsv qncaakykrn nqcdmwgjrf</div>
 </body>
 </html>
