add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -265,6 +265,6 @@
   <div>ofhsorfmqo joedytynij bmrhoystgt aqolbwyqwl lkaohhqqwq ydspehhvcr jmufajenyp lyknwtnhlp qwhwayeota avxkthdgwk</div>
   <div>dqgoibjasx daojmfqtbq yuffjuexad tcyqwerypv haxnlhopva akcuhtkqwr qfkcqcpycs gkodlyibss rjmsfudkyn</div>
   <div>epirpbcnin qkavankvvy edcxaxtxay ilrhcbsqpo ugenrjeyuh qfeeomqsml vfgbhxngje</div>
-  <div>trfawqbaor xtqnfgrvmr booakliweu qklguxucqq xldfivfxlv cbyheshrqv udiqowcrsn oyhudcgfye</div>
+  <div>ddlifylede</div>
 </body>
 </html>
