add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -372,6 +372,6 @@
   <div>oqshfpsgev mkuvjobdnu giqsrqdbus vtrqqfhrpu jayofqypnd nraasujxms</div>
   <div>lywjmhgluw</div>
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
-  <div>enybhfoegg rjbfpgwtar sbptxqhutq qlkemqxfol yvevwgvwgp gvjialdxwd ytexrusvyp bkgfwqjcyc wmhlkstsyl bjpgeydqgq</div>
+  <div>goehklxqww afxykbevun tsmrtgefca</div>
 </body>
 </html>
