add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -350,6 +350,6 @@
   <div>ntpxhyllrh mhpcshuoyl</div>
   <div>dslhjysbks krseqwluaf khfyipksij xihnocvoxj qoainoemip bopevureal jkopkojxrd qxxqktsncr</div>
   <div>qleoptgrkr bdwqddusux hhiwjqqbis</div>
-  <div>ascwcdjcpc yeloutsufh xrtsaeinuo avsmwmpfsm rsmahcgxsb</div>
+  <div>cnwfyxntdn quxemlivwc jqfouqfrhy opnldsekkq isrwjyunhn ilpqkmkawq rxaxkwrkxe</div>
 </body>
 </html>
