add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -396,6 +396,6 @@
   <div>opmtjuenot</div>
   <div>asubjkwmsw nmglkbfvte</div>
   <div>nisgheprwc biggmsbaay yferuvmush yvurhbpejx gejqdpytpk</div>
-  <div>hgsecflqyg gpnnrpaors mrasprcoje jksbivfidc mnpduywhym</div>
+  <div>finadjgthd xqxwgwppfp</div>
 </body>
 </html>
