add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -208,6 +208,6 @@
   <div>iglytslevd vjuvvuulmk dpeivkwmwc alxpknpeag psgvwiqewl ttujmiehtj oabbmaquga rbnndnfjim</div>
   <div>kjrxvdecye relchgwqtc hqifxoexhq</div>
   <div>eujqntjroe rmvdmanxpp wudibotplh esihvoigyd baerfpbeqq gijspwaemf qnyvlmcxho nagxhxovph aqfcahijpl</div>
-  <div>yhkoiyfmsa gxuioriavr gsuogwkodx irktahxdkf cxbondfcps bsvmtvkupb upccqesrpw arrwtlgeth iqngvjaevn epqnqgckax</div>
+  <div>womdccywdf pcubgvmand whikkihsdw ydcsumwugu qvsyxocbpb</div>
 </body>
 </html>
