add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -326,6 +326,6 @@
   <div>deshkownkq fjjlyxbtyl jmxjegcolw vuhsrjxrsi uuxakhocda</div>
   <div>ffbmwqwrer ckntevijru pyvfnpvgkp bxicvpqpbq jaorfuetam yiyqmbwsmw</div>
   <div>mgsciwilcx wmlorssgal twrqghmauk shdgspnyon uusoipdqrs sedimdcunu usdvcfjlon mhujvvnrte</div>
-  <div>ocsdyyvrwg ntbihvmtuh ndvbviuaeu lranxfcthj glartbeyyb bhnbskkmio pwclftanod uveeynmfjr qsaxbalfft txglynwebh</div>
+  <div>ecagljhybi qojnokehmf dcrhdebodv egvlmkvpha woefjiqflv rvgdyqkcyc</div>
 </body>
 </html>
