add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -305,6 +305,6 @@
   <div>cacfnapkob dxgdkbefds bhvehbhnhb vqfprocutr oeckislqjm</div>
   <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
-  <div>udlcpmjrjy wxmiseedsl ubiblannlo</div>
+  <div>ivofcqjayk qjgbffiftw qfsdbgstcf hgoaqawrkm yafrcnmhtf tjvlbiprly xfpfimvhmh aamfllviob xbknnlonys ohnnyfwtfy</div>
 </body>
 </html>
