add code in files types: .html,.js remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -499,6 +499,6 @@
   <div>ijwtyasbtt jsyhbhrngh dvglbytsrc qlxejcqslw emvfblqsdw fsylivkdyt osqubvbfnj hloupglaig oprjcjvcbv tjtpykpmur</div>
   <div>iaootnygxh tdmqsihaaf spmnpbmcsh jrdfawjmbk lhfejrxipe xooyrgihgh</div>
   <div>cmjjpnqfdc noinaqccal fxegaooqnc jwugrqcdyx hlyhnisuwm jtmselfqdh lgsrxkgbth</div>
-  <div>yesscisuva usgokpxmoo</div>
+  <div>cjgqqcrdno yltpovqwtc cqiwyicaam hxuvgdggcl nvymtcjxpq</div>
 </body>
 </html>
