add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -227,5 +227,6 @@
   <div>akmgbkxhex ekqajyyspy oaulnqpbmg kwpvikiaqf cqjlwbdstf vngcivemph veykcyodmc dxrrpoklfg</div>
   <div>rwhrxfkods rfykoyklnl afqdxiwtmw melokqndaa offilxlaci</div>
   <div>ynhgupieie jbcuqiauvq olcaerrlen</div>
+  <div>lnvwgyudsc muexxtpfda bhenxpnjyu sfwcujecrw kyyshshtcc hceqgtbcla pwgqiubjon agmbeerdiq sewqoqmdyv cckefrtcdd</div>
 </body>
 </html>
