add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -397,5 +397,6 @@
   <div>asubjkwmsw nmglkbfvte</div>
   <div>nisgheprwc biggmsbaay yferuvmush yvurhbpejx gejqdpytpk</div>
   <div>finadjgthd xqxwgwppfp</div>
+  <div>dvrvnwodfy uiduxpoufa</div>
 </body>
 </html>
