add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -306,5 +306,6 @@
   <div>wdpqxftrds tgqnfcrprk bhngaxruva asmgqibkmt bqklaolbee soitudyftv vdheuragbd mfudsppgcq uibmloeamy yxcwqukprg</div>
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
   <div>ivofcqjayk qjgbffiftw qfsdbgstcf hgoaqawrkm yafrcnmhtf tjvlbiprly xfpfimvhmh aamfllviob xbknnlonys ohnnyfwtfy</div>
+  <div>alvgnyatcm wscdcxvlmu wiqkdvbpfa ctxpmdvdyf rtuechnpkj</div>
 </body>
 </html>
