add code in files types: .html,.js,.xml remove code in files types: .js,.xml

--- a/content.html
+++ b/content.html
@@ -373,5 +373,6 @@
   <div>lywjmhgluw</div>
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
   <div>goehklxqww afxykbevun tsmrtgefca</div>
+  <div>imeyrioidl delowmxhvx bhjnvekohl mnrtupfcci rrwvejrodw lcwxhebodk lmlawjbinb pbmbuopyeh hjpbnjxhfe</div>
 </body>
 </html>
