add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -373,6 +373,6 @@
   <div>lywjmhgluw</div>
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
   <div>goehklxqww afxykbevun tsmrtgefca</div>
-  <div>imeyrioidl delowmxhvx bhjnvekohl mnrtupfcci rrwvejrodw lcwxhebodk lmlawjbinb pbmbuopyeh hjpbnjxhfe</div>
+  <div>noannaygdt ibtjwtrhik dnotvgjkcx afixpmvjmf</div>
 </body>
 </html>
