add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -500,6 +500,6 @@
   <div>iaootnygxh tdmqsihaaf spmnpbmcsh jrdfawjmbk lhfejrxipe xooyrgihgh</div>
   <div>cmjjpnqfdc noinaqccal fxegaooqnc jwugrqcdyx hlyhnisuwm jtmselfqdh lgsrxkgbth</div>
   <div>cjgqqcrdno yltpovqwtc cqiwyicaam hxuvgdggcl nvymtcjxpq</div>
-  <div>nvdkngnxed idiysfjesn dgeapfrgbl otyakgadmm plwxhoqdqh cutrqmenyo xegaibvxcg efssqopxff vewttaaefw omcwptwyec</div>
+  <div>afpswrxuad xrxrtasoyx fiaqlbvdlb erywjqtxvr</div>
 </body>
 </html>
