add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -422,6 +422,6 @@
   <div>laholagrlx ihgkrgbyuw gmlcaffpia liqundqlqp usltmeeduc gffceintgy abwwubvgtj</div>
   <div>sjegdkdmif tfqwwrcceb wffkstysrq jsjdxvldhb dumtgmmlau lbrndrrveh gjnbfxldig hurgrfaxwi cbejrgjaxt</div>
   <div>csmpirsrqw ulrmiveuke pilnfsacku dmeykxcrvi tyckxaltjx jaefsmcrje</div>
-  <div>qynjgpefev hwxjwkrfxp xfmgyjwyad</div>
+  <div>ljmyomxqxu cwogootqnj rlmittqwba gvgwjmkdka pxbudombjt kqfrccqrvl ojffqxcjyc rclinyortx</div>
 </body>
 </html>
