add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -266,6 +266,6 @@
   <div>dqgoibjasx daojmfqtbq yuffjuexad tcyqwerypv haxnlhopva akcuhtkqwr qfkcqcpycs gkodlyibss rjmsfudkyn</div>
   <div>epirpbcnin qkavankvvy edcxaxtxay ilrhcbsqpo ugenrjeyuh qfeeomqsml vfgbhxngje</div>
   <div>ddlifylede</div>
-  <div>fqdvedywiy gimxextfgt mojvfyturh mwsodqgoxl aydvheoruv dnmsyiugdk tkppkvcpvy uvvospgwqb kfslqnttbe</div>
+  <div>bmhhnmgbgq hvghwkeigp flrvjhmysd wdvdwrpxqt yodvjjlhjj ofjgxwnpaw bukeclibrl</div>
 </body>
 </html>
