add code in files types: .html remove code in files types: .html

--- a/content.html
+++ b/content.html
@@ -327,6 +327,6 @@
   <div>ffbmwqwrer ckntevijru pyvfnpvgkp bxicvpqpbq jaorfuetam yiyqmbwsmw</div>
   <div>mgsciwilcx wmlorssgal twrqghmauk shdgspnyon uusoipdqrs sedimdcunu usdvcfjlon mhujvvnrte</div>
   <div>ecagljhybi qojnokehmf dcrhdebodv egvlmkvpha woefjiqflv rvgdyqkcyc</div>
-  <div>mjfahnijrf ynespnwkfu cxbxkduscg oagweyiqaj fjyycfwamw trvjmdkqqo klfwuyghdq byywyawlgl wpkbcxtqvs djfqbsqfsg</div>
+  <div>uvkfpyxttl kfibivyiaq jybbhkqnfh iwxhwqdrhc wbokjtomif</div>
 </body>
 </html>
