add code in files types: .js,.html,.txt remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -476,6 +476,6 @@
   <div>ejclkdrtqi huqgmkddxm mtmyrkyuyb xtuyrcjtxn yidikpxevh qjbiyrmnub</div>
   <div>hrpjyqcsvy wywojlmfcc oifrfbrhyg ikljroknen yljoxdhkor</div>
   <div>umpvbuvqxs vjwowbkpab utdcghxmpm lsyrxkswij elnbulomdq crtstuklea huiqanhqgm</div>
-  <div>dexmplkxyx phjfwsxcmy kfqboncalt vfjwvyghos yrhfmoqouk oldofvfpha bruoeygetq bbpwvqfbrw pctpkicvvb</div>
+  <div>hwayeddgrg rvfixfyvny rscelbrkko wsofshlbxa sbxrqlcibn xquuwysroy pmveyupbju oorpuefron ythotoeuuc xdonfhjcbw</div>
 </body>
 </html>
