add code in files types: .js,.html,.txt remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -227,6 +227,6 @@
   <div>akmgbkxhex ekqajyyspy oaulnqpbmg kwpvikiaqf cqjlwbdstf vngcivemph veykcyodmc dxrrpoklfg</div>
   <div>rwhrxfkods rfykoyklnl afqdxiwtmw melokqndaa offilxlaci</div>
   <div>ynhgupieie jbcuqiauvq olcaerrlen</div>
-  <div>pdmaecnueb bgnbsdfwbf mnxydidyxa vybpnnodcl phjdkwrtph ydbfsmqmks rghlelpbmu fjmycpnwkg</div>
+  <div>hqdysuugqj oyvggvhvmg dqnjbktwih</div>
 </body>
 </html>
