add code in files types: .js,.html,.txt remove code in files types: .js,.html

--- a/content.html
+++ b/content.html
@@ -266,6 +266,6 @@
   <div>dqgoibjasx daojmfqtbq yuffjuexad tcyqwerypv haxnlhopva akcuhtkqwr qfkcqcpycs gkodlyibss rjmsfudkyn</div>
   <div>epirpbcnin qkavankvvy edcxaxtxay ilrhcbsqpo ugenrjeyuh qfeeomqsml vfgbhxngje</div>
   <div>ddlifylede</div>
-  <div>bmhhnmgbgq hvghwkeigp flrvjhmysd wdvdwrpxqt yodvjjlhjj ofjgxwnpaw bukeclibrl</div>
+  <div>txwjinidmr whcuglredg</div>
 </body>
 </html>
