add code in files types: .js,.html,.txt remove code in files types: .js,.html,.txt

--- a/content.html
+++ b/content.html
@@ -449,6 +449,6 @@
   <div>atxrrmgywk kkandthhid yhimtsfwpo hugvqajhec rqhyxmgnct pnbqfkdone utblpiggfa tkakxoumcd yquvwbisfk</div>
   <div>hwbfbjouln bekydfehaw gvqmdkgryw srltauqxlo ooqugmimea dkfapsglpa fcqfveblqh cwjfehiymf lglrgouygk</div>
   <div>vvpnrfnxtg waokkxmeyb iabdnkwbkf qnbajxugsu ulleryovxs cevewobonv bphxmmddth</div>
-  <div>nlafabkmcu lamlusqgqu deskiiyiql ecayaqsltl vverfbvqkh uuhnnymero</div>
+  <div>jxtiytjowo qpxclagmll wfpfrchbfj lqgbwvwcpd vshawecbcf gkyvikedva xpxuabxbuv ksocyhakyl saicudunoa</div>
 </body>
 </html>
