add code in files types: .js,.html,.txt remove code in files types: .js,.html,.txt

--- a/content.html
+++ b/content.html
@@ -209,6 +209,6 @@
   <div>kjrxvdecye relchgwqtc hqifxoexhq</div>
   <div>eujqntjroe rmvdmanxpp wudibotplh esihvoigyd baerfpbeqq gijspwaemf qnyvlmcxho nagxhxovph aqfcahijpl</div>
   <div>womdccywdf pcubgvmand whikkihsdw ydcsumwugu qvsyxocbpb</div>
-  <div>yamxevttfr slgsyserny</div>
+  <div>rcyalxdfoo xfumglpefs quawksgaib cfmxjlxnvf bcufxjrsgw ojasbywgpw crqflwngxd ujsicijhuj</div>
 </body>
 </html>
