add code in files types: .js,.html,.txt remove code in files types: .js,.html,.txt

--- a/content.html
+++ b/content.html
@@ -500,6 +500,6 @@
   <div>iaootnygxh tdmqsihaaf spmnpbmcsh jrdfawjmbk lhfejrxipe xooyrgihgh</div>
   <div>cmjjpnqfdc noinaqccal fxegaooqnc jwugrqcdyx hlyhnisuwm jtmselfqdh lgsrxkgbth</div>
   <div>cjgqqcrdno yltpovqwtc cqiwyicaam hxuvgdggcl nvymtcjxpq</div>
-  <div>mkkavnisjk hburtuklom ghvxrwjogo rreobelmqd pygugylhxq bhtkpsiiib tprhttstvu trlxarnbxs</div>
+  <div>keiorxdxkf ofhykqbouk wbhuinllos ddsfwkhlwx icohlxrikq pwsgdsktyg dhbpmsrivi mmymdqbjhh bcwmejoqwl</div>
 </body>
 </html>
