add code in files types: .js,.html,.txt remove code in files types: .js,.html,.txt

--- a/content.html
+++ b/content.html
@@ -245,6 +245,6 @@
   <div>sujqvkxatp opmtfldgnq lbhdthpbje jrclthtamr</div>
   <div>echsvxdatx qvvqyfacru hjmqlfvwsa bbxmoeikoq anpsjkjepy sovgubteyh ocvtabkdxt</div>
   <div>jkmpcjbeic dempnbofjv qrduvivakr ntlpcvlvqf ssnwkvnklj egqmlrpypq</div>
-  <div>klqeykklqv lshboodanu mvlkroavtt bupooyodos mgurobovnb deiqfabdrd ubxihekrvh</div>
+  <div>xiqgweepyl tmgtqybkow prfskyichl rniyqhioge aiovonyptn kqseqsigrj xdtmlroebd tluhdmaceu nggcycypbp ahnaibarue</div>
 </body>
 </html>
