add code in files types: .js,.html,.txt remove code in files types: .js,.html,.txt

--- a/content.html
+++ b/content.html
@@ -373,6 +373,6 @@
   <div>lywjmhgluw</div>
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
   <div>goehklxqww afxykbevun tsmrtgefca</div>
-  <div>ynsmfhqdic huwjytxrak qbbqeavglt akpyaemxtl oakikoritq</div>
+  <div>ndcmdlgyxs ntniqmnrex bpbwvyfemv ltnmncomsf inojgyqaiw</div>
 </body>
 </html>
