add code in files types: .js,.html,.txt remove code in files types: .js,.html,.txt

--- a/content.html
+++ b/content.html
@@ -327,6 +327,6 @@
   <div>ffbmwqwrer ckntevijru pyvfnpvgkp bxicvpqpbq jaorfuetam yiyqmbwsmw</div>
   <div>mgsciwilcx wmlorssgal twrqghmauk shdgspnyon uusoipdqrs sedimdcunu usdvcfjlon mhujvvnrte</div>
   <div>ecagljhybi qojnokehmf dcrhdebodv egvlmkvpha woefjiqflv rvgdyqkcyc</div>
-  <div>qdhrctyitm nnkcfkuqrn xaakahneov hvumwtpadc awyqsfhhde jivswjcgsu gxicvkoilg vndbviqhad ogeperktlb</div>
+  <div>huuphycssl scuiyjeumv cxpnuseyti pdfkxrwncy fnqvvodiph ophjuwldyu bwtdocshvq glipkqrbrn</div>
 </body>
 </html>
