add code in files types: .html remove code in files types:

--- a/content.html
+++ b/content.html
@@ -267,5 +267,6 @@
   <div>epirpbcnin qkavankvvy edcxaxtxay ilrhcbsqpo ugenrjeyuh qfeeomqsml vfgbhxngje</div>
   <div>ddlifylede</div>
   <div>nfubxfgned ulbqivdlvv bssnutctsq pxokmdecum</div>
+  <div>cuupeeumpa iekttegaux agnoijhdpx tkyeckgbnd</div>
 </body>
 </html>
