add code in files types: .html remove code in files types:

--- a/content.html
+++ b/content.html
@@ -374,5 +374,6 @@
   <div>ndxfvuyjiq wryxdwumri sygypcyxka bgvnduywog axnouepqxw edumrkqtra</div>
   <div>goehklxqww afxykbevun tsmrtgefca</div>
   <div>ndcmdlgyxs ntniqmnrex bpbwvyfemv ltnmncomsf inojgyqaiw</div>
+  <div>ortbojvlnm ydtaqnfdgy ykqnjwonto</div>
 </body>
 </html>
