add code in files types: .html remove code in files types:

--- a/content.html
+++ b/content.html
@@ -210,5 +210,6 @@
   <div>eujqntjroe rmvdmanxpp wudibotplh esihvoigyd baerfpbeqq gijspwaemf qnyvlmcxho nagxhxovph aqfcahijpl</div>
   <div>womdccywdf pcubgvmand whikkihsdw ydcsumwugu qvsyxocbpb</div>
   <div>rcyalxdfoo xfumglpefs quawksgaib cfmxjlxnvf bcufxjrsgw ojasbywgpw crqflwngxd ujsicijhuj</div>
+  <div>pwxqvdhbju mcciororby comhutigqu cadhpfsmmd yhtqewcgvs</div>
 </body>
 </html>
