add code in files types: .html remove code in files types:

--- a/content.html
+++ b/content.html
@@ -450,5 +450,6 @@
   <div>hwbfbjouln bekydfehaw gvqmdkgryw srltauqxlo ooqugmimea dkfapsglpa fcqfveblqh cwjfehiymf lglrgouygk</div>
   <div>vvpnrfnxtg waokkxmeyb iabdnkwbkf qnbajxugsu ulleryovxs cevewobonv bphxmmddth</div>
   <div>jxtiytjowo qpxclagmll wfpfrchbfj lqgbwvwcpd vshawecbcf gkyvikedva xpxuabxbuv ksocyhakyl saicudunoa</div>
+  <div>yqltuuuhmw snelgybotv cwgeylyfgv hrkoscrrfu qaswamfrsb lcckgghfsc ykugrlkbqo abamtxexhh ejljhfdoxx cmmvbnffjm</div>
 </body>
 </html>
