add code in files types: .html remove code in files types:

--- a/content.html
+++ b/content.html
@@ -398,5 +398,6 @@
   <div>nisgheprwc biggmsbaay yferuvmush yvurhbpejx gejqdpytpk</div>
   <div>finadjgthd xqxwgwppfp</div>
   <div>refidoxjgv</div>
+  <div>anrtggtsmt hitycnrxhe rbucyrslsu jbdbeoyrgm xbalvhfldf wbliaibbne ivbfugidfc</div>
 </body>
 </html>
