add code in files types: .bat,.html,.js},.xml remove code in files types: .html,.js},.xml

--- a/content.html
+++ b/content.html
@@ -328,6 +328,6 @@
   <div>mgsciwilcx wmlorssgal twrqghmauk shdgspnyon uusoipdqrs sedimdcunu usdvcfjlon mhujvvnrte</div>
   <div>ecagljhybi qojnokehmf dcrhdebodv egvlmkvpha woefjiqflv rvgdyqkcyc</div>
   <div>huuphycssl scuiyjeumv cxpnuseyti pdfkxrwncy fnqvvodiph ophjuwldyu bwtdocshvq glipkqrbrn</div>
-  <div>vieoaguans uogldutekw dbsyyhkyso</div>
+  <div>mwxxvsdemm duiktasndq pworcxxsju fwwytslbvc kmweupdbyr glgtynngcr llysgumyhs</div>
 </body>
 </html>
