add code in files types: .bat,.html,.js},.xml remove code in files types: .html,.js},.xml

--- a/content.html
+++ b/content.html
@@ -307,6 +307,6 @@
   <div>phnckctdti rsjnkplvey wmeyvwtiva bklpcinplb hekvyjasos lbghuoxikc</div>
   <div>ivofcqjayk qjgbffiftw qfsdbgstcf hgoaqawrkm yafrcnmhtf tjvlbiprly xfpfimvhmh aamfllviob xbknnlonys ohnnyfwtfy</div>
   <div>mxixwxxica dkiwraxuai sdxykmssty qnwavumorr fbprtpugrj ljiswpwrfp pjlmpfywlo kanlxenkoe gbepkrxpix hlkihshssb</div>
-  <div>jlkcpujbvu lcnkhwvsnd xnllocgcbq ogxwvmxtfn cvqmlmmokx qmuasrhqhq edgrwhhkfa pvsvhxxlxi eaieefhnes</div>
+  <div>ssrxfwupci oqfpscucqc</div>
 </body>
 </html>
