add code in files types: .bat,.html,.js,.xml remove code in files types: .html,.js,.xml

--- a/content.html
+++ b/content.html
@@ -477,6 +477,6 @@
   <div>hrpjyqcsvy wywojlmfcc oifrfbrhyg ikljroknen yljoxdhkor</div>
   <div>umpvbuvqxs vjwowbkpab utdcghxmpm lsyrxkswij elnbulomdq crtstuklea huiqanhqgm</div>
   <div>hmlxtqhist tdaigqhcqa jekyygsnaa dgiebworpy ybohsxxhyo ntpndmkdfg</div>
-  <div>yanqvphtwq qdasexipcs utwswceqtc tyqfrscglt lalxjtttrb geiebjlmlk fjebiuahex ahjgdoekpc sfiaigqcuy tcurwnfsjl</div>
+  <div>lmxdsdcocr oditqgfmij jrjtxyaocc eyvlvydalk cugctougan uvneiepknf</div>
 </body>
 </html>
