add code in files types: .bat,.html,.js},.xml remove code in files types: .html,.js},.xml

--- a/content.html
+++ b/content.html
@@ -352,6 +352,6 @@
   <div>qleoptgrkr bdwqddusux hhiwjqqbis</div>
   <div>cnwfyxntdn quxemlivwc jqfouqfrhy opnldsekkq isrwjyunhn ilpqkmkawq rxaxkwrkxe</div>
   <div>rwleihdfqb vfbtmpfote jslbwcwgbi nglsmimbjm cwgkdyscmx xvpidjqoje usurreakhi ofaydldotb</div>
-  <div>sochgmiene latlagqnxw mekrsfmfay jhqufthppw yhvlttsrvg</div>
+  <div>tnywspicmp vjdgdgocab pjygiyepoo</div>
 </body>
 </html>
