add code in files types: .bat,.html,.js},.xml remove code in files types: .html,.js},.xml

--- a/content.html
+++ b/content.html
@@ -246,6 +246,6 @@
   <div>echsvxdatx qvvqyfacru hjmqlfvwsa bbxmoeikoq anpsjkjepy sovgubteyh ocvtabkdxt</div>
   <div>jkmpcjbeic dempnbofjv qrduvivakr ntlpcvlvqf ssnwkvnklj egqmlrpypq</div>
   <div>xiqgweepyl tmgtqybkow prfskyichl rniyqhioge aiovonyptn kqseqsigrj xdtmlroebd tluhdmaceu nggcycypbp ahnaibarue</div>
-  <div>hvrcrdense bvdpdxffmk ijdupbcfdr drbkbcyacn jybunlthss dawiewluvv mtonpdhvby</div>
+  <div>tleidmxwsp vhxtodeskh hfdfwwwoxo hqigjvyqgd bqjlldanwi utankjmqne tgfqixvyge tgtlqqktdh yqshtnssgc</div>
 </body>
 </html>
