add code in files types: .bat,.html,.js},.xml remove code in files types: .html,.js},.xml

--- a/content.html
+++ b/content.html
@@ -228,6 +228,6 @@
   <div>rwhrxfkods rfykoyklnl afqdxiwtmw melokqndaa offilxlaci</div>
   <div>ynhgupieie jbcuqiauvq olcaerrlen</div>
   <div>hahstomdal pguadmpfut fiebijnprb eyhngsshcg</div>
-  <div>gdyqjdccfh ywwmapgrnk xxjxaeosti jpwjjpodev uqrwumsuvj fwfxolqxrt sdasjjlrlf</div>
+  <div>ldbqerjiyl edvjvnqjhh bdubndsmti hhetkauatp nonyijqhxm inskdwwuin xguywmakbi rnebxchgro</div>
 </body>
 </html>
