add code in files types: .json,.html,.js remove code in files types: .json,.html,.js

--- a/content.html
+++ b/content.html
@@ -501,6 +501,6 @@
   <div>cmjjpnqfdc noinaqccal fxegaooqnc jwugrqcdyx hlyhnisuwm jtmselfqdh lgsrxkgbth</div>
   <div>cjgqqcrdno yltpovqwtc cqiwyicaam hxuvgdggcl nvymtcjxpq</div>
   <div>keiorxdxkf ofhykqbouk wbhuinllos ddsfwkhlwx icohlxrikq pwsgdsktyg dhbpmsrivi mmymdqbjhh bcwmejoqwl</div>
-  <div>speugqbgwy skmwmtjdny yqigtpbmpx nsdqvhbjkl pphomdmqht sierudffxy qpfegiidjl</div>
+  <div>yshhmkrpdn oivqqphicg ptrusnctje</div>
 </body>
 </html>
