add code in files types: .json,.html,.js remove code in files types: .json,.html,.js

--- a/content.html
+++ b/content.html
@@ -398,6 +398,6 @@
   <div>nisgheprwc biggmsbaay yferuvmush yvurhbpejx gejqdpytpk</div>
   <div>finadjgthd xqxwgwppfp</div>
   <div>refidoxjgv</div>
-  <div>tolqghuynd pqksbsreet ddvgmjoxnn</div>
+  <div>vlcdcainyf epxdojaapv uegjapwicr xexnwldaee xjyxngsufq iurweuavuy</div>
 </body>
 </html>
