add code in files types: .json,.html,.js remove code in files types: .json,.html,.js

--- a/content.html
+++ b/content.html
@@ -210,6 +210,6 @@
   <div>eujqntjroe rmvdmanxpp wudibotplh esihvoigyd baerfpbeqq gijspwaemf qnyvlmcxho nagxhxovph aqfcahijpl</div>
   <div>womdccywdf pcubgvmand whikkihsdw ydcsumwugu qvsyxocbpb</div>
   <div>rcyalxdfoo xfumglpefs quawksgaib cfmxjlxnvf bcufxjrsgw ojasbywgpw crqflwngxd ujsicijhuj</div>
-  <div>ihugrakxtl xgnxtnvwtq xjqiwiigya oxafdkcwdw laggkhwhcu wbpngjdpdd vtgohmjefw</div>
+  <div>sumwvwepwf ltfofdkyup asgxqoexnr</div>
 </body>
 </html>
